# kimtest_sber_code_bot

./: ANALYSIS.md  LICENSE  README.md  api.yaml  pyproject.toml
src/: main.py
src/app/: crud.py  enums.py  handlers.py  keyboards.py  pmodels.py  polls.py  services.py  settings.py  utils.py
src/app/db/: base.py  models.py  repositories.py  uow.py  utils.py
src/app/llm/: llm.py  prompts.py
